# quickshare-gpui

./: Cargo.toml
crates/app/: Cargo.toml
crates/app/src/: actions.rs  main.rs  notification.rs  state.rs
crates/app/src/views/: content.rs  device_item.rs  header.rs  mod.rs  root.rs  settings_modal.rs  sidebar.rs  transfer_item.rs
crates/core/: Cargo.toml
crates/core/src/: channel.rs  lib.rs  manager.rs  utils.rs
crates/core/src/hdl/: ble.rs  blea.rs  inbound.rs  info.rs  mdns.rs  mdns_discovery.rs  mod.rs  outbound.rs
crates/core/tests/: e2e.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs
