[package]
name = "rquickshare"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rquickshare"
path = "src/main.rs"

[dependencies]
env_logger = "0.11"
gethostname = "1"
gpui = "0.2"
gpui_component = { version = "0.5", package = "gpui-component" }
log = { workspace = true }
notify-rust = "4.10"
open = "5"
rfd = "0.17"
rqs_lib = { workspace = true }
rqs_settings = { workspace = true }
tokio = { workspace = true }
