[package]
name = "rqs_lib"
version = "0.11.5"
edition = "2021"
authors = ["martichou"]

[features]
default = ["experimental"]
experimental = ["bluer", "btleplug"]
allow-self-discovery = []

[dependencies]
aes = "0.8"
anyhow = "1.0"
base64 = { version = "0.22", default-features = false, features = ["std"] }
btleplug = { version = "0.11", optional = true }
bytes = { version = "1.10", default-features = false }
cbc = { version = "0.1", features = ["alloc"] }
directories = "6.0"
get_if_addrs = "0.5"
gethostname = "1"
hex = { version = "0.4", default-features = false, features = ["std"] }
hkdf = "0.12"
hmac = { version = "0.12", features = ["reset"] }
log = "0.4"
mdns-sd = "0.18"
mime_guess = { version = "2.0", default-features = false }
num-bigint = { version = "0.4", default-features = false }
p256 = { version = "0.13", default-features = false, features = ["ecdh", "arithmetic", "std"] }
prost = "0.14"
rand = { version = "0.10", default-features = false, features = ["std", "std_rng", "thread_rng"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = { version = "0.10", default-features = false, features = ["std"] }
tokio = { version = "1.43", features = ["macros", "rt", "rt-multi-thread", "net", "sync", "time", "io-util"] }
tokio-stream = { version = "0.1", default-features = false }
tokio-util = { version = "0.7", features = ["rt"] }
uuid = { version = "1.15", default-features = false }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.17", default-features = false, features = ["bluetoothd"], optional = true }

[build-dependencies]
prost-build = "0.14"

[dev-dependencies]
env_logger = "0.11"
tempfile = "3"
